--- a/TwoChallenges/index.html
+++ b/TwoChallenges/index.html
@@ -6,6 +6,7 @@
   <title>Document</title>
 </head>
 <body>
+  <h2>use this page to run  array map file in console</h2>
   <script src="arrayMap.js"></script>
 </body>
 </html>
